// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`uva test default PATIENT basal  with gla 30 should generate flat sgv 1`] = `
Object {
  "Gp": 174.37004745786894,
  "Gt": 131.1799508421002,
  "I_": 40.61860643555381,
  "Il": 1.976332913311831,
  "Ip": 2.0309725628790614,
  "Isc1": 55.0272606991922,
  "Isc2": 49.58500411364556,
  "Qgut": 0,
  "Qsto1": 0,
  "Qsto2": 0,
  "W": 0,
  "X": 3.104665958488554,
  "XL": 40.611966753767,
  "Y": 0,
  "Z": 0,
}
`;

exports[`uva test default PATIENT basal  with gla 30 should generate flat sgv 2`] = `
Array [
  100.00004341832658,
  100.00063926368067,
  100.00252725607449,
  100.00601669304095,
  100.01099554189139,
  100.01710944059786,
  100.02389867218749,
  100.03087836643405,
  100.03758071320722,
  100.04357553884533,
  100.04847924685708,
  100.05195761737252,
  100.05372537271025,
  100.05354404066142,
  100.05121893578928,
  100.04659571215318,
  100.03955674845936,
  100.0300175223128,
  100.01792307087999,
  100.0032445994641,
  99.98597627655789,
  99.96613223844045,
  99.94374381548465,
  99.91885698448475,
  99.89153004559003,
  99.86183151827791,
  99.82983824783533,
  99.79563371176953,
  99.75930651423546,
  99.72094905578604,
  99.68065636540182,
  99.638525081735,
  99.59465257072965,
  99.54913616719132,
  99.50207252842114,
  99.45355708866214,
  99.4036836037946,
  99.35254377643696,
  99.30022695233883,
  99.24681987967845,
  99.19240652358462,
  99.13706792888514,
  99.08088212473683,
  99.02392406540461,
  98.96626560203799,
  98.9079754808265,
  98.8491193634182,
  98.7897598659401,
  98.72995661338331,
  98.66976630649724,
  98.60924279868827,
  98.54843718073275,
  98.48739787140062,
  98.42617071234282,
  98.36479906582355,
  98.3033239140861,
  98.24178395932238,
  98.18021572337811,
  98.1186536464699,
  98.05713018431587,
  97.99567590319238,
  97.93431957252645,
  97.8730882547178,
  97.81200739195725,
  97.75110088987144,
  97.69039119787806,
  97.62989938618193,
  97.56964521938103,
  97.50964722668517,
  97.44992276877699,
  97.39048810136715,
  97.33135843551558,
  97.27254799480333,
  97.21407006945239,
  97.15593706750009,
  97.09816056313947,
  97.04075134234309,
  96.98371944588942,
  96.92707420991245,
  96.8708243040955,
  96.81497776762852,
  96.75954204304666,
  96.70452400806536,
  96.64993000552398,
  96.59576587154669,
  96.5420369620245,
  96.48874817752021,
  96.43590398669122,
  96.38350844832301,
  96.33156523206044,
  96.28007763791979,
  96.22904861466036,
  96.17848077709033,
  96.1283764223761,
  96.07873754542227,
  96.0295658533838,
  95.98086277936838,
  95.93262949538435,
  95.88486692458443,
  95.83757575285355,
  95.79075643978533,
  95.7444092290882,
  95.69853415846039,
  95.65313106896954,
  95.60819961397017,
  95.56373926759015,
  95.51974933281504,
  95.47622894919652,
  95.43317710021017,
  95.39059262028456,
  95.34847420152381,
  95.30682040014207,
  95.26562964262867,
  95.2249002316599,
  95.18463035177344,
  95.1448180748189,
  95.10546136519793,
  95.06655808490542,
  95.02810599838377,
  94.99010277719917,
  94.95254600455034,
  94.91543317961765,
  94.87876172176126,
  94.84252897457489,
  94.8067322098026,
  94.77136863112462,
  94.73643537781794,
  94.70192952829703,
  94.66784810353992,
  94.63418807040355,
  94.60094634483362,
  94.56811979497175,
  94.5357052441647,
  94.50369947387806,
  94.47209922651865,
  94.44090120816755,
  94.41010209122739,
  94.37969851698595,
  94.34968709809914,
  94.32006442099483,
  94.29082704820063,
  94.26197152059714,
  94.2334943595989,
  94.20539206926459,
  94.17766113833908,
  94.15029804222785,
  94.12329924490673,
  94.09666120076736,
  94.07038035640096,
  94.04445315232125,
  94.01887602462807,
  93.99364540661307,
  93.96875773030924,
  93.94420942798507,
  93.91999693358459,
  93.8961166841154,
  93.87256512098476,
  93.84933869128581,
  93.82643384903463,
  93.80384705635967,
  93.7815747846442,
  93.75961351562347,
  93.73795974243713,
  93.71660997063852,
  93.69556071916143,
  93.6748085212456,
  93.65434992532201,
  93.63418149585894,
  93.61429981416973,
  93.59470147918336,
  93.57538310817856,
  93.55634133748288,
  93.53757282313717,
  93.51907424152645,
  93.50084228997865,
  93.48287368733116,
  93.46516517446709,
  93.44771351482123,
  93.43051549485712,
  93.41356792451606,
  93.39686763763822,
  93.38041149235784,
  93.36419637147193,
  93.34821918278459,
  93.33247685942672,
  93.3169663601523,
  93.30168466961197,
  93.28662879860447,
  93.27179578430705,
  93.25718269048477,
  93.24278660768047,
  93.22860465338498,
  93.2146339721888,
  93.20087173591611,
  93.18731514374102,
  93.17396142228725,
  93.16080782571179,
  93.14785163577282,
  93.13509016188274,
  93.1225207411467,
  93.1101407383873,
  93.09794754615592,
  93.08593858473128,
  93.07411130210544,
  93.06246317395825,
  93.05099170362031,
  93.03969442202498,
  93.02856888765002,
  93.01761268644928,
  93.0068234317747,
  92.99619876428925,
  92.98573635187125,
  92.97543388950996,
  92.96528909919378,
  92.9552997297903,
  92.9454635569196,
  92.93577838282035,
  92.9262420362095,
  92.91685237213595,
  92.90760727182808,
  92.89850464253591,
  92.88954241736776,
  92.88071855512234,
  92.87203104011598,
  92.86347788200511,
  92.85505711560528,
  92.84676680070561,
  92.83860502188023,
  92.83056988829594,
  92.82265953351656,
  92.81487211530509,
  92.80720581542207,
  92.79965883942253,
  92.79222941644973,
  92.78491579902749,
  92.77771626285009,
  92.77062910657072,
  92.76365265158803,
  92.75678524183193,
  92.75002524354731,
]
`;

exports[`uva test default PATIENT basal 0.70 from PROFILE should generate flat sgv 1`] = `
Object {
  "Gp": 186.79258235613025,
  "Gt": 141.43742162834323,
  "I_": 37.776007480446765,
  "Il": 1.827759122422773,
  "Ip": 1.8888017206357495,
  "Isc1": 51.28205128204566,
  "Isc2": 46.21020005621574,
  "Qgut": 0,
  "Qsto1": 0,
  "Qsto2": 0,
  "W": 0,
  "X": 0.2612491440926876,
  "XL": 37.77575534490338,
  "Y": 0,
  "Z": 0,
}
`;

exports[`uva test default PATIENT basal 0.70 from PROFILE should generate flat sgv 2`] = `
Array [
  100.00004443966257,
  100.00066279085601,
  100.00266472677394,
  100.00647965292272,
  100.01215279062865,
  100.01950984994552,
  100.0282814763839,
  100.03817343912634,
  100.04890127344669,
  100.06020541051817,
  100.07185642672918,
  100.08365555820106,
  100.09543308312013,
  100.10704584710473,
  100.11837454088408,
  100.12932101251374,
  100.13980573782939,
  100.14976549681077,
  100.15915126754811,
  100.1679263328666,
  100.1760645873536,
  100.18354902969773,
  100.19037042455558,
  100.1965261184764,
  100.20201899518909,
  100.2068565565255,
  100.2110501162832,
  100.21461409535772,
  100.2175654074674,
  100.21992292573617,
  100.22170702128383,
  100.2229391657998,
  100.22364159084127,
  100.22383699730356,
  100.22354830916171,
  100.22279846617825,
  100.22161025081903,
  100.2200061451166,
  100.218008213674,
  100.21563800941419,
  100.21291649905288,
  100.20986400561065,
  100.20650016558483,
  100.2028438986757,
  100.19891338820884,
  100.19472607061749,
  100.19029863254632,
  100.18564701431679,
  100.18078641865218,
  100.17573132370215,
  100.1704954995328,
  100.16509202735878,
  100.15953332089495,
  100.15383114929145,
  100.14799666119357,
  100.1420404095367,
  100.13597237674638,
  100.1298020000656,
  100.12353819677894,
  100.11718938914154,
  100.11076352885797,
  100.10426812098449,
  100.09771024715637,
  100.09109658806315,
  100.08443344511481,
  100.0777267612589,
  100.07098214092184,
  100.06420486906043,
  100.05739992931885,
  100.0505720212961,
  100.04372557693387,
  100.0368647760423,
  100.02999356098405,
  100.02311565054248,
  100.01623455299983,
  100.00935357845655,
  100.00247585042133,
  99.99560431670507,
  99.98874175964959,
  99.98189080572492,
  99.97505393452681,
  99.96823348720646,
  99.96143167436372,
  99.95465058343443,
  99.94789218560112,
  99.94115834225603,
  99.93445081104359,
  99.9277712515087,
  99.92112123037623,
  99.91450222648544,
  99.90791563540208,
  99.90136277373001,
  99.89484488314248,
  99.88836313415241,
  99.88191862963998,
  99.87551240815424,
  99.86914544700512,
  99.86281866516079,
  99.85653292596402,
  99.85028903968126,
  99.8440877658963,
  99.83792981575982,
  99.83181585410594,
  99.82574650144508,
  99.8197223358427,
  99.8137438946922,
  99.80781167638985,
  99.80192614191913,
  99.79608771635138,
  99.7902967902684,
  99.7845537211135,
  99.7788588344756,
  99.77321242531175,
  99.76761475911238,
  99.76206607301327,
  99.7565665768584,
  99.75111645421637,
  99.74571586335496,
  99.74036493817522,
  99.73506378910875,
  99.72981250398043,
  99.72461114883853,
  99.71945976875483,
  99.71435838859595,
  99.70930701376832,
  99.70430563093754,
  99.69935420872459,
  99.69445269837917,
  99.68960103443193,
  99.68479913532677,
  99.6800469040339,
  99.6753442286446,
  99.6706909829488,
  99.66608702699583,
  99.6615322076395,
  99.65702635906766,
  99.6525693033174,
  99.6481608507757,
  99.64380080066674,
  99.63948894152591,
  99.635225051661,
  99.631008899601,
  99.62684024453317,
  99.62271883672786,
  99.61864441795257,
  99.61461672187448,
  99.61063547445232,
  99.60670039431783,
  99.60281119314672,
  99.59896757601963,
  99.59516924177323,
  99.59141588334181,
  99.58770718808917,
  99.58404283813147,
  99.58042251065089,
  99.5768458782006,
  99.57331260900081,
  99.56982236722624,
  99.56637481328556,
  99.56296960409232,
  99.55960639332788,
  99.55628483169639,
  99.55300456717228,
  99.54976524523984,
  99.54656650912555,
  99.54340800002305,
  99.54028935731091,
  99.53721021876353,
  99.53417022075496,
  99.53116899845617,
  99.52820618602554,
  99.52528141679332,
  99.52239432343907,
  99.51954453816359,
  99.51673169285432,
  99.5139554192453,
  99.51121534907072,
  99.50851111421336,
  99.50584234684733,
  99.50320867957521,
  99.50060974556027,
  99.49804517865323,
  99.49551461351416,
  99.49301768572944,
  99.49055403192392,
  99.48812328986834,
  99.4857250985825,
  99.48335909843365,
  99.48102493123068,
  99.47872224031418,
  99.47645067064248,
  99.47420986887332,
  99.47199948344216,
  99.46981916463652,
  99.46766856466634,
  99.46554733773137,
  99.46345514008463,
  99.46139163009278,
  99.45935646829311,
  99.45734931744745,
  99.45536984259282,
  99.45341771108941,
  99.45149259266552,
  99.44959415945962,
  99.44772208605974,
  99.44587604954052,
  99.44405572949725,
  99.44226080807783,
  99.44049097001219,
  99.43874590263948,
  99.43702529593295,
  99.43532884252286,
  99.4336562377171,
  99.43200717952003,
  99.43038136864914,
  99.4287785085501,
  99.42719830540993,
  99.42564046816848,
  99.4241047085279,
  99.4225907409612,
  99.42109828271855,
  99.41962705383257,
  99.41817677712207,
  99.41674717819429,
  99.41533798544589,
  99.41394893006287,
  99.412579746019,
  99.41123017007324,
  99.40989994176597,
  99.40858880341429,
  99.40729650010601,
  99.40602277969315,
  99.40476739278398,
  99.40353009273444,
  99.40231063563881,
  99.40110878031925,
  99.3999242883148,
  99.39875692386974,
  99.39760645392083,
  99.39647264808445,
  99.39535527864258,
  99.39425412052856,
  99.39316895131206,
  99.39209955118365,
  99.39104570293875,
  99.39000719196123,
  99.38898380620637,
  99.38797533618362,
  99.38698157493883,
  99.3860023180361,
  99.38503736353935,
  99.38408651199344,
  99.38314956640522,
  99.38222633222396,
  99.38131661732197,
  99.38042023197447,
  99.37953698883956,
  99.37866670293792,
  99.3778091916325,
  99.3769642746075,
  99.3761317738479,
  99.37531151361833,
  99.37450332044202,
  99.37370702307965,
  99.37292245250826,
  99.37214944189974,
  99.37138782659933,
  99.37063744410446,
  99.36989813404301,
  99.36916973815205,
  99.36845210025609,
  99.36774506624555,
  99.36704848405543,
  99.36636220364363,
  99.36568607696961,
  99.36501995797265,
  99.36436370255078,
  99.36371716853915,
  99.36308021568888,
  99.36245270564582,
  99.36183450192925,
  99.36122546991093,
  99.36062547679391,
  99.36003439159185,
  99.35945208510802,
  99.35887842991472,
  99.35831330033248,
  99.35775657240971,
]
`;

exports[`uva test default PATIENT basal 0.75 from PROFILE + 10U should generate a curve with min 40 1`] = `
Object {
  "Gp": 80.04810422214628,
  "Gt": 40.28697248590791,
  "I_": 208.42877476055517,
  "Il": 44.76743838707893,
  "Ip": 19.99316654766212,
  "Isc1": 176.40956260401776,
  "Isc2": 254.25793769144948,
  "Qgut": 0,
  "Qsto1": 0,
  "Qsto2": 0,
  "W": 0,
  "X": 338.01703372002186,
  "XL": 87.38616640758718,
  "Y": 0,
  "Z": 0,
}
`;

exports[`uva test default PATIENT basal 0.75 from PROFILE + 10U should generate a curve with min 40 2`] = `
Array [
  100.00004264161005,
  100.0006213714681,
  100.00242271052365,
  99.99792384675492,
  99.90673296498714,
  99.59909800024302,
  98.96215339822214,
  97.91534156519907,
  96.41177823388135,
  94.43520509098101,
  91.9954279300371,
  89.12335312196704,
  85.86608792575532,
  82.2823120235828,
  78.43802110801597,
  74.40270126465836,
  70.245978842596,
  66.03478650703819,
  61.83108190049705,
  57.69014483856612,
  53.65945990503258,
  49.77816473540069,
  46.07701388000602,
  42.57877884156717,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
]
`;

exports[`uva test default PATIENT basal 0.75 from PROFILE + 50g CARBS + 5U should generate a curve 1`] = `
Object {
  "Gp": 237.71160477794848,
  "Gt": 164.04949378844253,
  "I_": 139.04962760701002,
  "Il": 6.451626007441896,
  "Ip": 5.589723471118134,
  "Isc1": 84.810779553499,
  "Isc2": 129.8627622012441,
  "Qgut": 1176.0809941175373,
  "Qsto1": 13.363407253453056,
  "Qsto2": 1026.1103826643443,
  "W": 0,
  "X": 109.21648810360648,
  "XL": 96.18453805076754,
  "Y": 0,
  "Z": 0,
}
`;

exports[`uva test default PATIENT basal 0.75 from PROFILE + 50g CARBS + 5U should generate a curve 2`] = `
Array [
  100.00004344074452,
  100.00063978009236,
  100.00253027350361,
  100.00022145358407,
  99.93352251449454,
  99.70549349667368,
  99.36967894376468,
  100.12142808950391,
  103.10274182257979,
  108.28238455043054,
  115.10910078366179,
  122.90477989974627,
  131.03493344770885,
  138.97454040663996,
  146.32505688416595,
  152.80894987326482,
  158.25447083286465,
  162.57702855942043,
  165.760420781662,
  167.83955847117625,
  168.88541457348984,
  168.99242331502975,
  168.2682845298544,
  166.8259925843457,
  164.77784871243082,
  162.2311904881151,
  159.28556339940982,
  156.03106083916649,
  152.5475704853508,
  148.90468787540897,
  145.16209051040914,
  141.37020408761003,
  137.57103153082514,
  133.79905117742422,
  130.0821202677148,
  126.44234296699388,
]
`;

exports[`uva test default PATIENT basal 0.75 from PROFILE + 50g CARBS should generate a curve 1`] = `
Object {
  "Gp": 432.6247096665882,
  "Gt": 340.46068896209886,
  "I_": 38.57724584323862,
  "Il": 1.940889689379203,
  "Ip": 1.998094193876495,
  "Isc1": 54.75534609101646,
  "Isc2": 48.7799616573907,
  "Qgut": 480.2344473447339,
  "Qsto1": 2.505580166758789,
  "Qsto2": 400.20308230431124,
  "W": 0,
  "X": 2.0828726555780763,
  "XL": 37.82546520360286,
  "Y": 0,
  "Z": 0,
}
`;

exports[`uva test default PATIENT basal 0.75 from PROFILE + 50g CARBS should generate a curve 2`] = `
Array [
  100.13725958657677,
  101.66671679221494,
  105.76653288723423,
  112.42478387876761,
  121.10152166645324,
  131.12795040323837,
  141.8782273587602,
  152.83298434722747,
  163.59258009768376,
  173.8683851820691,
  183.46456829131233,
  192.2480304575594,
  200.15852177726111,
  207.1822441277268,
  213.33515276775458,
  218.65386189514217,
  223.18842688918403,
  226.99680439514734,
  230.1407204863062,
  232.6826763233896,
  234.6838488240752,
  236.2026811005261,
  237.29399475996456,
  238.00848980906625,
  238.39252662459808,
  238.48810819955128,
  238.3330000986862,
  237.96094088512334,
  237.40190785256956,
  236.68241230710095,
  235.82580590329954,
  234.85258508686033,
  233.78068488924404,
  232.6257564527501,
  231.40142497292766,
  230.119526418398,
]
`;

exports[`uva test default PATIENT basal 0.75 from PROFILE + 500g CARBS should generate a curve with max 400 1`] = `
Object {
  "Gp": 707.55656999924,
  "Gt": 452.78248957686606,
  "I_": 37.63501554830254,
  "Il": 1.8712006820591789,
  "Ip": 1.9328330272679328,
  "Isc1": 53.96902765394085,
  "Isc2": 47.19081523736483,
  "Qgut": 29204.67595082871,
  "Qsto1": 6082.262534675929,
  "Qsto2": 41798.94434707729,
  "W": 0,
  "X": 0.5224347663442177,
  "XL": 37.49672892692031,
  "Y": 0,
  "Z": 0,
}
`;

exports[`uva test default PATIENT basal 0.75 from PROFILE + 500g CARBS should generate a curve with max 400 2`] = `
Array [
  100.00004344074452,
  100.00063978009236,
  100.00253027350361,
  100.00602685486191,
  100.01102094323277,
  100.0171621292742,
  100.43564333859274,
  105.02927190399573,
  117.32987768907162,
  137.3006307191245,
  163.32314847852822,
  193.38954209090733,
  225.58199479759315,
  258.3540533640414,
  290.5296655468007,
  321.26333383006187,
  349.9882539271432,
  376.3598776591702,
  400,
  400,
  400,
  400,
  400,
  400,
  400,
  400,
  400,
  400,
  400,
  400,
  400,
  400,
  400,
  400,
  400,
  400,
]
`;

exports[`uva test default PATIENT basal 0.75 from PROFILE with 60% exercise should generate curve sgv 1`] = `
Object {
  "Gp": 118.84153617067572,
  "Gt": 81.43288793763907,
  "I_": 38.57724584323862,
  "Il": 1.940889689379203,
  "Ip": 1.998094193876495,
  "Isc1": 54.75534609101646,
  "Isc2": 48.7799616573907,
  "Qgut": 0,
  "Qsto1": 0,
  "Qsto2": 0,
  "W": 5342.999999999982,
  "X": 2.0828726555780763,
  "XL": 37.82546520360286,
  "Y": 8.438303689132207e-9,
  "Z": 0.9040418973768898,
}
`;

exports[`uva test default PATIENT basal 0.75 from PROFILE with 60% exercise should generate curve sgv 2`] = `
Array [
  99.89814037698908,
  99.4225317645088,
  98.58079249584156,
  97.47135416720675,
  96.17665561268514,
  94.75021735382575,
  93.22412631325132,
  91.61755128436114,
  89.94259150223087,
  88.20770959415093,
  86.4195990416085,
  84.58415529460736,
  82.70696437894097,
  80.8789522430743,
  79.32098317247905,
  78.02148826733692,
  76.89899992135366,
  75.88736703334253,
  74.94517142388875,
  74.04903931300358,
  73.1864320113355,
  72.35076967925912,
  71.53859680949273,
  70.74812546887541,
  69.97946226704421,
  69.23512726465486,
  68.51711471735496,
  67.82605116816852,
  67.16181712859564,
  66.52395017459978,
  65.91183709895937,
  65.32480318833764,
  64.76215342253506,
  64.22319131797187,
  63.70722742426185,
  63.21358306950837,
]
`;
